load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "event_listeners.go",
        "job_terminated.go",
        "node_connected.go",
        "task_created.go",
        "task_terminated.go",
    ],
    importpath = "github.com/mennanov/scalemate/scheduler/event_listeners",
    visibility = ["//visibility:public"],
    deps = [
        "//scheduler/models:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//scheduler/server:go_default_library",
        "//shared/events_proto:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_streadway_amqp//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "job_terminated_test.go",
        "node_connected_test.go",
        "task_created_test.go",
        "task_terminated_test.go",
        "testsuite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//scheduler/migrations:go_default_library",
        "//scheduler/models:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//scheduler/server:go_default_library",
        "//shared/events_proto:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@in_gopkg_khaiql_dbcleaner_v2//:go_default_library",
        "@in_gopkg_khaiql_dbcleaner_v2//engine:go_default_library",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
    ],
)
