load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "add_resource_request.go",
        "create_container.go",
        "get_container.go",
        "list_containers.go",
        "options.go",
        "server.go",
        "stop_container.go",
        "stub.go",
        "validators.go",
    ],
    data = [
        "//cert:cert",
    ],
    importpath = "github.com/mennanov/scalemate/scheduler/frontend",
    visibility = ["//visibility:public"],
    deps = [
        "//scheduler/models:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//shared/auth:go_default_library",
        "//shared/events:go_default_library",
        "//shared/events_proto:go_default_library",
        "//shared/middleware:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_go_ozzo_ozzo_validation//:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//recovery:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "add_resource_request_test.go",
        "create_container_test.go",
        "get_container_test.go",
        "list_containers_test.go",
        "stop_container_test.go",
        "testsuite_test.go",
    ],
    data = ["//scheduler/migrations"],
    embed = [":go_default_library"],
    deps = [
        "//scheduler/backend:go_default_library",
        "//scheduler/conf:go_default_library",
        "//scheduler/handlers:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//shared/auth:go_default_library",
        "//shared/events:go_default_library",
        "//shared/testutils:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_golang_migrate_migrate//:go_default_library",
        "@com_github_golang_migrate_migrate//database/postgres:go_default_library",
        "@com_github_golang_migrate_migrate//source/file:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_nats_io_go_nats_streaming//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",  # keep
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ],
)

load("@com_github_atlassian_bazel_tools//gorevive:def.bzl", "go_revive_test")

go_revive_test(
    name = "go_lint",
    # Go source files to be linted.
    srcs = glob(["*.go"]),
    # Revive .toml config.
    config = "//:revive.toml",  # it can also be a regular Bazel label.
    formatter = "stylish",
    # The paths have to be relative to the workspace root.
    paths = [
        "./...",
    ],
)
