load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "job.go",
        "jobs_selector.go",
        "node.go",
        "task.go",
        "utils.go",
    ],
    importpath = "github.com/mennanov/scalemate/scheduler/models",
    visibility = ["//visibility:public"],
    deps = [
        "//scheduler/bitarray:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//shared/events:go_default_library",
        "//shared/events/events_proto:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//protoc-gen-go/generator:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/postgres:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_mennanov_fieldmask_utils//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "job_test.go",
        "jobs_selector_test.go",
        "node_test.go",
        "task_test.go",
        "testsuite_test.go",
        "utils_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//scheduler/migrations:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//scheduler/server:go_default_library",
        "//shared/events:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/generator:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_mennanov_fieldmask_utils//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@in_gopkg_khaiql_dbcleaner_v2//:go_default_library",
        "@in_gopkg_khaiql_dbcleaner_v2//engine:go_default_library",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
    ],
)

filegroup(
    name = "go_srcs",
    srcs = glob(["*.go"]),
    visibility = ["//scheduler:__subpackages__"],
)
