load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "container.go",
        "node.go",
        "node_pricing.go",
        "node_sorter.go",
        "processed_event.go",
        "resource_request.go",
        "resource_requests_selector.go",
        "utils.go",
    ],
    importpath = "github.com/mennanov/scalemate/scheduler/models",
    visibility = ["//visibility:public"],
    deps = [
        "//scheduler/scheduler_proto:go_default_library",
        "//shared/events:go_default_library",
        "//shared/events_proto:go_default_library",
        "//shared/utils:go_default_library",
        "//shared/utils/bitarray:go_default_library",
        "@com_github_Masterminds_squirrel//:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/generator:go_default_library_gen",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_mennanov_fieldmask_utils//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "container_test.go",
        "node_sorter_test.go",
        "node_test.go",
        "processed_event_test.go",
        "resource_request_test.go",
        "resource_requests_selector_test.go",
        "testsuite_test.go",
    ],
    data = [
        "//scheduler/migrations",
    ],
    embed = [":go_default_library"],
    deps = [
        "//scheduler/conf:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//shared/events_proto:go_default_library",
        "//shared/testutils:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_golang_migrate_migrate//:go_default_library",
        "@com_github_golang_migrate_migrate//database/postgres:go_default_library",
        "@com_github_golang_migrate_migrate//source/file:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

load("@com_github_atlassian_bazel_tools//gorevive:def.bzl", "go_revive_test")

go_revive_test(
    name = "go_lint",
    # Go source files to be linted.
    srcs = glob(["*.go"]),
    # Revive .toml config.
    config = "//:revive.toml",  # it can also be a regular Bazel label.
    formatter = "stylish",
    # The paths have to be relative to the workspace root.
    paths = [
        "./...",
    ],
)
