load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# gazelle:ignore

proto_library(
    name = "events_proto_proto",
    srcs = ["events.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//accounts/accounts_proto:accounts_proto_proto",
        "//billing/billing_proto:billing_proto_proto",
        "//scheduler/scheduler_proto:scheduler_proto_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@gogo_special_proto//github.com/gogo/protobuf/gogoproto",
    ],
)

go_proto_library(
    name = "events_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_grpc"],
    importpath = "github.com/mennanov/scalemate/shared/events_proto",
    proto = ":events_proto_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts/accounts_proto:go_default_library",
        "//billing/billing_proto:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":events_go_proto"],
    importpath = "github.com/mennanov/scalemate/shared/events_proto",
    visibility = ["//visibility:public"],
)
